--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">xyz</li>
+		<li data-ns-test="shoppingList">abc</li>
+		<li data-ns-test="shoppingList">pqr</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">abc</li>
+		<li data-ns-test="holidayList">pqr</li>
+		<li data-ns-test="holidayList">xyz</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
